--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Test</title>
-</head>
-<body>
-    <h1>Hello from my server!</h1>
-    <p>This is a test page.</p>
-</body>
-</html>
+<html><body>
+<h1>CGI Test - Python</h1>
+<h2>Environment Variables:</h2>
+<pre>
+HTTP_ACCEPT: = text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7
+HTTP_ACCEPT_ENCODING: = gzip,
+HTTP_ACCEPT_LANGUAGE: = fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7
+HTTP_CHROME";V = "142",="Not_A
+HTTP_CONNECTION: = keep-alive
+HTTP_HOST: = localhost:8082
+HTTP_NT = 10.0;
+HTTP_SEC_CH_UA: = "Chromium";v="142", "Google
+HTTP_SEC_CH_UA_MOBILE: = ?0
+HTTP_SEC_CH_UA_PLATFORM: = "Windows"
+HTTP_SEC_FETCH_DEST: = document
+HTTP_SEC_FETCH_MODE: = navigate
+HTTP_SEC_FETCH_SITE: = none
+HTTP_SEC_FETCH_USER: = ?1
+HTTP_UPGRADE_INSECURE_REQUESTS: = 1
+HTTP_USER_AGENT: = Mozilla/5.0 (Windows
+LC_CTYPE = C.UTF-8
+QUERY_STRING = 
+REQUEST_METHOD = GET
+SCRIPT_NAME = /cgi-bin/test.py
+SERVER_PROTOCOL = HTTP/1.1
+</pre>
+<h2>Request Info:</h2>
+<p>Method: GET</p>
+<p>Query: </p>
+</body></html>
